<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Other Names -->

    <string name="lifeEventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>

    <!-- Field Names -->
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="emailAddress">Email:</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>

    <!-- Button Names -->
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="logout">Logout</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="male_events">Male Events</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="search">Search</string>
    <string name="settings">settings</string>
    <string name="click_on_a_marker">Click on a marker</string>
    <string name="to_see_event_details">to see event details</string>

</resources>